changed styles to prevent document horisontal scrolling on mobile devices

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -72,6 +72,10 @@ figure {
 }
 */
 /********** BASE RULES *********/
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   position: relative;
   display: -webkit-box;
